# AOC24

./: .gitignore  CMakeLists.txt
src/: Day.h  Day1.h  Day10.h  Day11.h  Day12.h  Day13.h  Day14.h  Day15.h  Day16.h  Day2.h  Day3.h  Day4.h  Day5.h  Day6.h  Day7.h  Day8.h  Day9.h  DirectoryMacro.h  DirectoryMacro.h.in  Utility.h  main.cpp
